fixed alignment issue in heading

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ button{
     main{
         width: 90%;
     }
-    body{
+    section{
         line-height: 1.2rem;
     }
 }
@@ -96,3 +96,4 @@ button{
         width: 70%;
     }
 }
+
